Overflow & Animation Fix

--- a/src/css/customer_dashboard.css
+++ b/src/css/customer_dashboard.css
@@ -1,7 +1,6 @@
 body {
     margin: 0;
     padding: 0;
-    overflow: scroll;
     transition: all 0.5s ease-in-out;
     flex-direction: row;
  }
