--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -24,7 +24,7 @@ body {
 
     margin-top: 0.65vw;
     -webkit-text-fill-color: #F5F7FF;
-    margin-left: 2.75vw;
+    margin-left: 13.5vw;
 }
 
 .tbh {
